--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,8 @@
     "tests"
   ],
   "dependencies": {
-    "d3": "~3.5.6"
+    "d3": "~3.5.6",
+    "Snap.svg": "~0.4.1",
+    "bootstrap": "~3.3.5"
   }
 }
